--- a/css/components/projects.css
+++ b/css/components/projects.css
@@ -36,12 +36,18 @@
 }
 
 .projects ul li .projects__info p {
-  margin: 1rem 0 4rem;
+  margin: 5rem 0 4rem;
+}
+
+.projects ul li .projects__info h3 {
+  margin: 5rem 2rem;
 }
 
 .projects ul li .projects__info a {
   font-weight: 500;
   text-decoration: underline;
+
+  
 }
 
 @media only screen and (max-width: 768px) {
